android_wrapper/build_error.txt
Running Gradle task 'assembleDebug'...                          
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
/home/allanosan/.pub-cache/hosted/pub.dev/permission_handler_android-10.3.6/android/src/main/java/com/baseflow/permissionhandler/PermissionHandlerPlugin.java:28: error: cannot find symbol
    @Nullable private io.flutter.plugin.common.PluginRegistry.Registrar pluginRegistrar;
                                                             ^
  symbol:   class Registrar
  location: interface PluginRegistry
/home/allanosan/.pub-cache/hosted/pub.dev/permission_handler_android-10.3.6/android/src/main/java/com/baseflow/permissionhandler/PermissionHandlerPlugin.java:47: error: cannot find symbol
    public static void registerWith(io.flutter.plugin.common.PluginRegistry.Registrar registrar) {
                                                                           ^
  symbol:   class Registrar
  location: interface PluginRegistry
2 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':permission_handler_android:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  warning: [options] target value 8 is obsolete and will be removed in a future release
  warning: [options] source value 8 is obsolete and will be removed in a future release
  /home/allanosan/.pub-cache/hosted/pub.dev/permission_handler_android-10.3.6/android/src/main/java/com/baseflow/permissionhandler/PermissionHandlerPlugin.java:28: error: cannot find symbol
      @Nullable private io.flutter.plugin.common.PluginRegistry.Registrar pluginRegistrar;
                                                               ^
    symbol:   class Registrar
    location: interface PluginRegistry
  /home/allanosan/.pub-cache/hosted/pub.dev/permission_handler_android-10.3.6/android/src/main/java/com/baseflow/permissionhandler/PermissionHandlerPlugin.java:47: error: cannot find symbol
      public static void registerWith(io.flutter.plugin.common.PluginRegistry.Registrar registrar) {
                                                                             ^
    symbol:   class Registrar
    location: interface PluginRegistry
  warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
  2 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 11s
Running Gradle task 'assembleDebug'...                             12,0s

┌─ Flutter Fix ───────────────────────────────────────────────────────────────────────────────────┐
│ [!] Consult the error logs above to identify any broken plugins, specifically those containing  │
│ "error: cannot find symbol..."                                                                  │
│ This issue is likely caused by v1 embedding removal and the plugin's continued usage of removed │
│ references to the v1 embedding.                                                                 │
│ To fix this error, please upgrade your current package's dependencies to latest versions by     │
│ running `flutter pub upgrade`.                                                                  │
│ If that does not work, please file an issue for the problematic plugin(s) here:                 │
│ https://github.com/flutter/flutter/issues                                                       │
└─────────────────────────────────────────────────────────────────────────────────────────────────┘
Gradle task assembleDebug failed with exit code 1
